[gd_scene load_steps=5 format=3 uid="uid://dqn51jaojemgy"]

[ext_resource type="Script" uid="uid://mqbiqpms0g07" path="res://ui/menu/SettingsMenu.gd" id="1_7nnky"]
[ext_resource type="Theme" uid="uid://clh031dvmhoxe" path="res://ui/theme/SettingsMenuTheme.tres" id="1_rd3qm"]
[ext_resource type="Script" uid="uid://db85fb86bo305" path="res://ui/menu/FocusOnHover.gd" id="3_q13fc"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_7nnky"]

[node name="SettingsMenu" type="PanelContainer" groups=["save"]]
process_mode = 2
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxEmpty_7nnky")
script = ExtResource("1_7nnky")
metadata/_custom_type_script = "uid://vl5uuupklejb"

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme = ExtResource("1_rd3qm")

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/margin_top = 10
theme_override_constants/margin_bottom = -8

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer"]
custom_minimum_size = Vector2(750, 0)
layout_mode = 2
size_flags_horizontal = 4
theme = ExtResource("1_rd3qm")
theme_override_constants/separation = 20
alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 4

[node name="EnemySpeedLabel" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Enemy Speed"
vertical_alignment = 1

[node name="EnemySpeed" type="HSlider" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme = ExtResource("1_rd3qm")
min_value = 1.0
max_value = 5.0
step = 0.5
value = 1.0
ticks_position = 3

[node name="FocusOnHover" type="Node" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/EnemySpeed"]
script = ExtResource("3_q13fc")
metadata/_custom_type_script = "uid://db85fb86bo305"

[node name="EnemySpeedValue" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
size_flags_horizontal = 8
vertical_alignment = 1

[node name="HBoxContainer2" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="TimescaleLabel" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
text = "Timescale"
vertical_alignment = 1

[node name="Timescale" type="HSlider" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer2"]
unique_name_in_owner = true
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme = ExtResource("1_rd3qm")
min_value = 0.5
max_value = 4.0
step = 0.25
value = 1.0
ticks_position = 3

[node name="FocusOnHover" type="Node" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer2/Timescale"]
script = ExtResource("3_q13fc")
metadata/_custom_type_script = "uid://db85fb86bo305"

[node name="TimescaleValue" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer2"]
unique_name_in_owner = true
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
vertical_alignment = 1

[node name="HBoxContainer3" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="BrightnessLabel" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer3"]
layout_mode = 2
size_flags_horizontal = 3
text = "Brightness"
vertical_alignment = 1

[node name="Brightness" type="HSlider" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer3"]
unique_name_in_owner = true
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme = ExtResource("1_rd3qm")
max_value = 2.0
step = 0.09999999999126884
ticks_position = 3

[node name="FocusOnHover" type="Node" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer3/Brightness"]
script = ExtResource("3_q13fc")
metadata/_custom_type_script = "uid://db85fb86bo305"

[node name="BrightnessValue" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer3"]
unique_name_in_owner = true
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
vertical_alignment = 1

[node name="HBoxContainer4" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="VolumeLabel" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer4"]
layout_mode = 2
size_flags_horizontal = 3
text = "Volume"
vertical_alignment = 1

[node name="Volume" type="HSlider" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer4"]
unique_name_in_owner = true
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme = ExtResource("1_rd3qm")
max_value = 10.0
ticks_position = 3

[node name="FocusOnHover" type="Node" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer4/Volume"]
script = ExtResource("3_q13fc")
metadata/_custom_type_script = "uid://db85fb86bo305"

[node name="VolumeValue" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer4"]
unique_name_in_owner = true
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
vertical_alignment = 1

[node name="HBoxContainer5" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="ClockLabel" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer5"]
layout_mode = 2
size_flags_horizontal = 3
text = "Clock"
vertical_alignment = 1

[node name="Clock" type="HSlider" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer5"]
unique_name_in_owner = true
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme = ExtResource("1_rd3qm")
max_value = 1.0
ticks_position = 3

[node name="FocusOnHover" type="Node" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer5/Clock"]
script = ExtResource("3_q13fc")
metadata/_custom_type_script = "uid://db85fb86bo305"

[node name="ClockValue" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer5"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
vertical_alignment = 1

[node name="HBoxContainer6" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="MouseLockLabel" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer6"]
layout_mode = 2
size_flags_horizontal = 3
text = "Mouse Lock"
vertical_alignment = 1

[node name="MouseLock" type="HSlider" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer6"]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme = ExtResource("1_rd3qm")
max_value = 1.0
ticks_position = 3

[node name="FocusOnHover" type="Node" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer6/MouseLock"]
script = ExtResource("3_q13fc")
metadata/_custom_type_script = "uid://db85fb86bo305"

[node name="MouseLockValue" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer6"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
vertical_alignment = 1

[node name="HBoxContainer7" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="MouseHideLabel" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer7"]
layout_mode = 2
size_flags_horizontal = 3
text = "Mouse Hide"
vertical_alignment = 1

[node name="MouseHide" type="HSlider" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer7"]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme = ExtResource("1_rd3qm")
max_value = 1.0
ticks_position = 3

[node name="FocusOnHover" type="Node" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer7/MouseHide"]
script = ExtResource("3_q13fc")
metadata/_custom_type_script = "uid://db85fb86bo305"

[node name="MouseHideValue" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer7"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
vertical_alignment = 1

[connection signal="visibility_changed" from="." to="." method="_on_visibility_changed"]
[connection signal="value_changed" from="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/EnemySpeed" to="." method="onEnemySpeed"]
[connection signal="value_changed" from="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer2/Timescale" to="." method="onTimescale"]
[connection signal="value_changed" from="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer3/Brightness" to="." method="onBrightness"]
[connection signal="value_changed" from="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer4/Volume" to="." method="onVolume"]
[connection signal="value_changed" from="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer5/Clock" to="." method="onClock"]
[connection signal="value_changed" from="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer6/MouseLock" to="." method="onMouseLock"]
[connection signal="value_changed" from="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer7/MouseHide" to="." method="onMouseHide"]
